apps/zitadel/zitadel.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel
spec:
  selector:
    app: zitadel
  type: ClusterIP
  ports:
    - name: zitadel
      protocol: TCP
      port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zitadel
  labels:
    app: zitadel
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: zitadel
  template:
    metadata:
      labels:
        app: zitadel
    spec:
      # prevent service env vars from clashing with config env vars
      enableServiceLinks: false
      containers:
        - name: zitadel
          image: "ghcr.io/zitadel/zitadel:v2.58.3"
          imagePullPolicy: IfNotPresent
          args:
            - start-from-setup
            - --masterkeyFromEnv
            - --config
            - /run/config/zitadel-config.yaml
          volumeMounts:
            - name: config
              mountPath: /run/config
              readOnly: true
            - name: tls
              mountPath: /run/tls
              readOnly: true
          resources:
            requests:
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /debug/healthz
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 0
            periodSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /debug/ready
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 0
            periodSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /debug/ready
              port: 8080
              scheme: HTTPS
            periodSeconds: 1
            failureThreshold: 300
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      securityContext:
        runAsNonRoot: true
        runAsUser: 11024
        runAsGroup: 11024
        fsGroup: 11024
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tls
          secret:
            secretName: zitadel-ingress-tls
        - name: config
          configMap:
            name: zitadel-config
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - zitadel
              topologyKey: kubernetes.io/hostname
