apps/zitadel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zitadel
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: id.mhnet.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zitadel
                port:
                  name: zitadel
  tls:
    - hosts:
        - id.mhnet.app
      secretName: zitadel-ingress-tls
